Fix text alignment in data models

Use default for all genuine text data, and
right alignment for numeric data even when
it is issued to the view as text.

BUG: 277291
Column alignments in task table are incorrect